--- a/WiiUtils/Makefile
+++ b/WiiUtils/Makefile
@@ -1,7 +1,7 @@
 
 CC = gcc
 CFLAGS = -Wall -g -Isrc -Isrc/include 
-SRCS = ./main.c ./src/PMPDecoder.c ./src/KCLDecoder.c ./src/FileUtil/FileRead.c ./src/PMPUtil/PMPRead.c ./src/PMPUtil/PMPJson.c ./src/MatrixUtil/MatrixOperations.c ./src/KCLUtil/KCLCalculateTris.c ./src/KCLUtil/KCLJson.c ./src/KCLUtil/KCLRead.c ./src/KCLUtil/KCLSections.c
+SRCS = ./main.c ./src/PMPDecoder.c ./src/KCLDecoder.c ./src/PMPEncoder.c ./src/PMPUtil/PMPDumpRead.c ./src/PMPUtil/PMPWrite.c ./src/FileUtil/FileRead.c ./src/PMPUtil/PMPRead.c ./src/PMPUtil/PMPJson.c ./src/MatrixUtil/MatrixOperations.c ./src/KCLUtil/KCLCalculateTris.c ./src/KCLUtil/KCLJson.c ./src/KCLUtil/KCLRead.c ./src/KCLUtil/KCLSections.c
 OBJS = $(SRCS:.c=.o)
 TARGET = WiiUtils
 
